# Linera-Dominion

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  deploy-to-testnet.sh
backend/: README.md  index.js  package-lock.json  package.json  render.yaml
backend/data/: players.json
battle/: Cargo.toml
battle/src/: combat.rs  contract.rs  lib.rs  service.rs  state.rs
common/: Cargo.toml
common/src/: constants.rs  coordinates.rs  crypto.rs  errors.rs  lib.rs  messages.rs  resources.rs  types.rs  units.rs
dominion/: Cargo.toml
dominion/src/: contract.rs  lib.rs  operations.rs  service.rs  state.rs
frontend/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/audio/: README.md
frontend/public/images/: README.md
frontend/scripts/: setup-images.sh
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/game/: GameHUD.tsx  MiniMap.tsx  NavigationPanel.tsx  ResourceBar.tsx
frontend/src/components/panels/: BuildingsPanel.tsx  DiplomacyPanel.tsx  FleetsPanel.tsx  GalaxyPanel.tsx  LeaderboardPanel.tsx  OverviewPanel.tsx  ResearchPanel.tsx
frontend/src/components/three/: SpaceScene.tsx
frontend/src/components/ui/: BackgroundMusic.tsx  LoadingScreen.tsx  MainMenu.tsx  SettingsModal.tsx
frontend/src/hooks/: useLinera.ts  useWallet.ts  useWeb3Wallet.ts
frontend/src/lib/: apollo.ts  leaderboardApi.ts  linera.ts  persistence.ts  queries.ts
frontend/src/lib/linera/: LineraProvider.tsx  index.ts  lineraAdapter.ts  queries.ts  wasmInit.ts
frontend/src/store/: gameStore.ts
region/: Cargo.toml
region/src/: contract.rs  lib.rs  service.rs  state.rs
scripts/: deploy-testnet.sh  deploy.sh
