[workspace]
resolver = "2"
members = [
    "common",
    "dominion",
    "region",
    "battle",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Linera Dominion Team"]
license = "Apache-2.0"
repository = "https://github.com/linera-dominion/linera-dominion"
description = "A decentralized, deterministic MMORTS on the Linera Microchain Protocol"

[workspace.dependencies]
# Linera SDK
linera-sdk = "=0.15.8"
linera-views = "0.15.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcs = "0.1"

# Async
async-trait = "0.1"
futures = "0.3"

# GraphQL (pinned to 7.0.17 for Rust 1.86.0 compatibility with Linera v0.15.8)
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-value = "=7.0.17"

# Cryptography
sha3 = "0.10"
rand = "0.8"
hex = "0.4"

# Utilities
thiserror = "1.0"
log = "0.4"

[profile.release]
debug = false
lto = true
opt-level = "z"
strip = "symbols"
