[package]
name = "linera-dominion"
description = "User Chain - Personal empire management for Linera Dominion MMORTS"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
linera-sdk.workspace = true
linera-views.workspace = true
serde.workspace = true
serde_json.workspace = true
bcs.workspace = true
async-trait.workspace = true
async-graphql.workspace = true
sha3.workspace = true
hex.workspace = true
thiserror.workspace = true
log.workspace = true

# Shared types from other crates
linera-dominion-common = { path = "../common" }

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "linera-dominion-contract"
path = "src/contract.rs"

[[bin]]
name = "linera-dominion-service"
path = "src/service.rs"
